{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 100,
  "lineage": "21ee6748-e3a5-e49a-7a01-da903c97bb34",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myaws_WP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a1235697f4afa8a4",
            "arn": "arn:aws:ec2:ap-south-1:223107715638:instance/i-0862d6e920ca06c26",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0862d6e920ca06c26",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_tf_ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f12a4717ef3fcc20",
            "private_dns": "ip-10-0-1-175.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-43-204-19-234.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.19.234",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02469e09238b03da6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5863ce3eeb2b578",
            "tags": {
              "Name": "asmworld wordpress by tf"
            },
            "tags_all": {
              "Name": "asmworld wordpress by tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-064cef4ca01536a6f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.amsSGWordPress",
            "aws_subnet.main",
            "aws_vpc.ams_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ams-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:223107715638:internet-gateway/igw-0005b1baf04c21ffb",
            "id": "igw-0005b1baf04c21ffb",
            "owner_id": "223107715638",
            "region": "ap-south-1",
            "tags": {
              "Name": "ams world ig tf"
            },
            "tags_all": {
              "Name": "ams world ig tf"
            },
            "vpc_id": "vpc-0481eb4cbd1a4cbc8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ams_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ams_rounting_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:223107715638:route-table/rtb-019520cce85f21f41",
            "id": "rtb-019520cce85f21f41",
            "owner_id": "223107715638",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0005b1baf04c21ffb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ams rounting table for internet"
            },
            "tags_all": {
              "Name": "ams rounting table for internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0481eb4cbd1a4cbc8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ams-gw",
            "aws_vpc.ams_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c2682705f9f9d5f",
            "region": "ap-south-1",
            "route_table_id": "rtb-019520cce85f21f41",
            "subnet_id": "subnet-0b5863ce3eeb2b578"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ams-gw",
            "aws_route_table.ams_rounting_table",
            "aws_subnet.main",
            "aws_vpc.ams_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cd1e2605edd1fc4",
            "region": "ap-south-1",
            "route_table_id": "rtb-019520cce85f21f41",
            "subnet_id": "subnet-031da6182754de9db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ams-gw",
            "aws_route_table.ams_rounting_table",
            "aws_subnet.main-1b",
            "aws_vpc.ams_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "amsSGWordPress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:223107715638:security-group/sg-064cef4ca01536a6f",
            "description": "Allow TLS inbound traffic for http and all outbound traffic for all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064cef4ca01536a6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "amsSGWordPress",
            "name_prefix": "",
            "owner_id": "223107715638",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "amsSGWordPress TF"
            },
            "tags_all": {
              "Name": "amsSGWordPress TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-0481eb4cbd1a4cbc8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ams_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:223107715638:subnet/subnet-0b5863ce3eeb2b578",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5863ce3eeb2b578",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "223107715638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "ams public subnet 1"
            },
            "tags_all": {
              "Name": "ams public subnet 1"
            },
            "vpc_id": "vpc-0481eb4cbd1a4cbc8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ams_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:223107715638:subnet/subnet-031da6182754de9db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031da6182754de9db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "223107715638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "ams public subnet 1b"
            },
            "tags_all": {
              "Name": "ams public subnet 1b"
            },
            "vpc_id": "vpc-0481eb4cbd1a4cbc8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ams_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:223107715638:subnet/subnet-0ab3c85aa2379016f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab3c85aa2379016f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "223107715638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "ams public subnet 1c"
            },
            "tags_all": {
              "Name": "ams public subnet 1c"
            },
            "vpc_id": "vpc-0481eb4cbd1a4cbc8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ams_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ams_world",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:223107715638:vpc/vpc-0481eb4cbd1a4cbc8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0115cf5130b8e8931",
            "default_route_table_id": "rtb-02170904f9d36fe3f",
            "default_security_group_id": "sg-0b1b0967fef9620b6",
            "dhcp_options_id": "dopt-0f4ecbc9eb6790fe2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0481eb4cbd1a4cbc8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02170904f9d36fe3f",
            "owner_id": "223107715638",
            "region": "ap-south-1",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:223107715638:security-group-rule/sgr-076abdfc13427a60b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-076abdfc13427a60b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-064cef4ca01536a6f",
            "security_group_rule_id": "sgr-076abdfc13427a60b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.amsSGWordPress",
            "aws_vpc.ams_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:223107715638:security-group-rule/sgr-017d2d20a56aff600",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-017d2d20a56aff600",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-064cef4ca01536a6f",
            "security_group_rule_id": "sgr-017d2d20a56aff600",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.amsSGWordPress",
            "aws_vpc.ams_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:223107715638:security-group-rule/sgr-09331d369fdbc72ea",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-09331d369fdbc72ea",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-064cef4ca01536a6f",
            "security_group_rule_id": "sgr-09331d369fdbc72ea",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.amsSGWordPress",
            "aws_vpc.ams_world"
          ]
        }
      ]
    }
  ]
}